syntax = "proto3";

option go_package = "./im";

package im;

/**
 * 数据类型
 */
enum PackType {
    /**
     * 登陆
     */
     LOGIN = 0;
    /**
     * 退出
     */
     LOGOUT = 1;
    /**
     * 响应
     */
     RESPONSE = 2;
    /**
     * 消息
     */
     MESSAGE = 3;
}

/**
 * 聊天类型
 */
 enum ChatType {
  /**
   * 单聊消息
   */
  CHAT = 0;
  /**
   * 群聊消息
   */
  GROUP_CHAT = 1;
  /**
   * 系统消息
   */
  SYSTEM = 2;
}

/**
 * 消息类型
 */
 enum MessageType {
    /**
     * 文本
     */
     TEXT = 0;
     /**
      * 图片
      */
     IMAGE = 1;
     /**
      * 语音
      */
     AUDIO = 2;
     /**
      * 视频
      */
     VEDIO = 3;
     /**
      * 自定义消息
      */
     CUSTOM = 4;
}


/**
 * 一包数据
 */
 message PackData {
  string id = 1; // 消息id
  uint32 from = 2; // 发送者
  uint32 to = 3; // 接收者
  PackType type = 4; // 消息类型
  bytes payload = 5; // 消息内容
  uint64 timestamp = 6; // 时间戳
}

/**
 * 登陆请求体
 */
 message LoginPack {
  uint32 uid = 1; 
  uint32 clientType = 2; 
  string password = 3; 

}

/**
 * 退出登录请求体
 */
 message LogoutPack {
  uint32 code = 1; 
  string reason = 2; 
}

/**
 * 通用相应体
 */
message ResponsePack {
  uint32 code = 1; 
  string payload = 2; 
}